--- a/index.html
+++ b/index.html
@@ -1,177 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Official 2026 Portal</title>
+    <title>ልማት Hub | Digital 2026</title>
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --light: #f4f7f6; --white: #ffffff; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; }
-        body { background: var(--white); color: #333; line-height: 1.6; }
-
-        /* HEADER & NAV */
-        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; position: sticky; top: 0; z-index: 2000; font-size: 0.85rem; }
-        nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 5%; background: white; border-bottom: 1px solid #eee; position: sticky; top: 40px; z-index: 1000; }
-        .logo { font-size: 22px; font-weight: bold; color: var(--blue); text-decoration: none; }
-        .lang-bar { display: flex; gap: 10px; }
-        .lang-btn { padding: 5px 10px; border: 1px solid #ddd; border-radius: 4px; cursor: pointer; font-size: 0.8rem; font-weight: bold; background: #f9f9f9; }
-        .join-btn { background: var(--yellow); color: var(--blue); padding: 8px 20px; border-radius: 50px; font-weight: bold; text-decoration: none; border: 2px solid var(--blue); }
-
-        .container { max-width: 1000px; margin: 40px auto; padding: 0 5%; }
-
-        /* HERO LOGIN */
-        .portal-card { background: var(--blue); color: white; padding: 50px 20px; border-radius: 15px; text-align: center; border: 4px solid var(--yellow); margin-bottom: 50px; }
-        .id-input { width: 90%; max-width: 400px; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
-        .v-btn { background: var(--yellow); color: var(--blue); padding: 15px 40px; border: none; border-radius: 8px; font-weight: 800; cursor: pointer; text-transform: uppercase; }
-
-        /* DASHBOARD OPTIONS */
-        .dashboard-options { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-bottom: 50px; }
-        .opt-card { background: var(--light); padding: 20px; border-radius: 10px; border-left: 5px solid var(--blue); text-align: left; }
-        .opt-card h4 { color: var(--blue); margin-bottom: 5px; }
-
-        /* TRACKS GRID */
-        .grid-title { text-align: left; color: var(--blue); margin-bottom: 25px; border-left: 5px solid var(--yellow); padding-left: 15px; }
-        .tracks-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 60px; }
-        .track { background: #fff; padding: 25px; border-radius: 12px; border: 1px solid #eee; border-top: 5px solid var(--blue); text-align: left; transition: 0.3s; }
-        .track:hover { transform: translateY(-5px); border-top-color: var(--yellow); }
-
-        /* FOOTER */
-        footer { background: #111; color: #ccc; padding: 60px 5% 30px; border-top: 6px solid var(--yellow); }
-        .f-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; text-align: left; }
-        .f-col h4 { color: var(--yellow); margin-bottom: 20px; font-size: 0.9rem; }
-        .f-bottom { border-top: 1px solid #333; margin-top: 40px; padding-top: 20px; text-align: center; font-size: 0.8rem; }
+        :root { --b: #003973; --y: #FFD700; --g: #f4f4f4; }
+        body { font-family: sans-serif; margin: 0; background: #fff; }
+        .tick { background: var(--y); color: var(--b); padding: 10px; text-align: center; font-weight: bold; font-size: 14px; }
+        nav { display: flex; justify-content: space-between; padding: 15px 5%; border-bottom: 1px solid #ddd; }
+        .logo { color: var(--b); font-weight: bold; font-size: 20px; text-decoration: none; }
+        .main { max-width: 900px; margin: 40px auto; padding: 20px; text-align: center; }
+        .card { background: var(--b); color: #fff; padding: 40px; border-radius: 15px; border: 4px solid var(--y); }
+        input { width: 80%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 16px; text-align: center; }
+        button { background: var(--y); color: var(--b); padding: 15px 30px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        .langs { margin-bottom: 20px; }
+        .l-btn { margin: 0 5px; padding: 5px 10px; cursor: pointer; border: 1px solid #ddd; background: #eee; border-radius: 4px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-top: 40px; }
+        .tr { padding: 20px; border: 1px solid #eee; border-top: 4px solid var(--b); text-align: left; background: var(--g); border-radius: 8px; }
+        footer { background: #111; color: #777; padding: 40px; margin-top: 50px; text-align: center; font-size: 12px; }
     </style>
 </head>
 <body>
 
-<div class="ticker" id="ticker">MISSION 2026: Enrollment Open for Verified Citizens • Digital Ethiopia Strategy</div>
+<div class="tick" id="tk">ENROLLMENT OPEN: DIGITAL ETHIOPIA 2026 • VERIFIED BY FAYDA ID</div>
 
 <nav>
     <a href="#" class="logo">ልማት Hub</a>
-    <div class="nav-right" style="display:flex; align-items:center; gap:15px;">
-        <div class="lang-bar">
-            <button class="lang-btn" onclick="translatePage('en')">EN</button>
-            <button class="lang-btn" onclick="translatePage('am')">አማ</button>
-            <button class="lang-btn" onclick="translatePage('om')">ORM</button>
-        </div>
-        <a href="#" class="join-btn" id="join-btn">JOIN NOW</a>
+    <div>
+        <span id="jb" style="background:var(--y); padding:8px 15px; border-radius:20px; font-weight:bold; font-size:12px; border:1px solid var(--b);">JOIN NOW</span>
     </div>
 </nav>
 
-<div class="container">
-    <div class="portal-card">
-        <h1 id="h-title">Ethiopia's 2026 Digital Mission</h1>
-        <p id="h-sub">National ID Verification Portal</p>
-        <input type="number" class="id-input" id="id-box" placeholder="Enter Fayda ID to access dashboard">
+<div class="main">
+    <div class="langs">
+        <button class="l-btn" onclick="sh('en')">English</button>
+        <button class="l-btn" onclick="sh('am')">አማርኛ</button>
+        <button class="l-btn" onclick="sh('om')">Afaan Oromoo</button>
+    </div>
+
+    <div class="card">
+        <h1 id="ht">Ethiopia's 2026 Digital Mission</h1>
+        <p id="hs">National ID Verification Portal</p>
+        <input type="number" id="ip" placeholder="Enter Fayda ID">
         <br>
-        <button class="v-btn" id="v-btn">VERIFY & ENTER</button>
+        <button id="vb">VERIFY & ENTER</button>
     </div>
 
-    <div class="dashboard-options">
-        <div class="opt-card">
-            <h4 id="opt-1-t">Course Progress</h4>
-            <p id="opt-1-p">0% Completed (Verification Required)</p>
-        </div>
-        <div class="opt-card">
-            <h4 id="opt-2-t">Digital Certificates</h4>
-            <p id="opt-2-p">Linked to Fayda ID</p>
-        </div>
-        <div class="opt-card">
-            <h4 id="opt-3-t">Support Center</h4>
-            <p id="opt-3-p">24/7 Live Agent Access</p>
-        </div>
-    </div>
-
-    <h2 class="grid-title" id="t-head">Official Specializations (10 Tracks)</h2>
-    <div class="tracks-grid" id="track-container">
-        </div>
+    <h2 id="th" style="text-align:left; margin-top:40px; color:var(--b);">Official Tracks</h2>
+    <div class="grid" id="gl"></div>
 </div>
 
 <footer>
-    <div class="f-grid">
-        <div class="f-col">
-            <h4>ልማት Hub</h4>
-            <p id="f-about">Building the tech workforce of 2026.</p>
-        </div>
-        <div class="f-col">
-            <h4 id="f-links">Quick Links</h4>
-            <p>Mission Statement</p>
-            <p>Curriculum</p>
-        </div>
-        <div class="f-col">
-            <h4 id="f-contact">Contact Us</h4>
-            <p>Email: contact@lemathub.et</p>
-            <p>Addis Ababa, Ethiopia</p>
-        </div>
-    </div>
-    <div class="f-bottom">
-        <p id="f-copy">© 2026 ልማት Hub | Official Fayda National ID Partner</p>
-        <p style="margin-top:5px; opacity:0.6;" id="f-motto">Empowering Ethiopia's Digital Transformation</p>
-    </div>
+    <p id="cp">© 2026 ልማት Hub | Official Fayda Partner</p>
 </footer>
 
 <script>
-    const data = {
-        en: {
-            ticker: "MISSION 2026: Enrollment Open for Verified Citizens • Digital Ethiopia Strategy",
-            join: "JOIN NOW",
-            title: "Ethiopia's 2026 Digital Mission",
-            sub: "National ID Verification Portal",
-            btn: "VERIFY & ENTER",
-            opt1T: "Course Progress", opt1P: "0% Completed",
-            opt2T: "Certificates", opt2P: "Linked to Fayda ID",
-            opt3T: "Support Center", opt3P: "Live Agent Access",
-            tHead: "Official Specializations (10 Tracks)",
-            tracks: ["AI Engineering", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"]
-        },
-        am: {
-            ticker: "ተልዕኮ 2026፡ ለተረጋገጡ ዜጎች ምዝገባ ተከፍቷል • የዲጂታል ኢትዮጵያ ስትራቴጂ",
-            join: "አሁን ይቀላቀሉ",
-            title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ",
-            sub: "የብሔራዊ መታወቂያ ማረጋገጫ ፖርታል",
-            btn: "አረጋግጥ እና ግባ",
-            opt1T: "የትምህርት ሂደት", opt1P: "0% ተጠናቋል",
-            opt2T: "የምስክር ወረቀቶች", opt2P: "ከፋይዳ መታወቂያ ጋር የተያያዘ",
-            opt3T: "የድጋፍ ማዕከል", opt3P: "የቀጥታ ወኪል እገዛ",
-            tHead: "ኦፊሴላዊ የሥልጠና ዘርፎች (10 ትራኮች)",
-            tracks: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "ሙሉ የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ ዴቭኦፕስ", "የሞባይል መተግበሪያ", "ብሎክቼይን", "ዩአይ/ዩኤክስ ዲዛይን", "አይኦቲ ሲስተምስ", "ፊንቴክ"]
-        },
-        om: {
-            ticker: "ERGA 2026: Galmeen lammilee mirkanaa'aniif banameera • Tooftaa Itoophiyaa",
-            join: "AMMA SEENI",
-            title: "Ergaa Diigitalaa Itoophiyaa 2026",
-            sub: "Waraqaa Eenyummaa Mirkaneessuuf",
-            btn: "MIRKANEESSI & SEENI",
-            opt1T: "Adeemsa Leenjii", opt1P: "0% kan xumurame",
-            opt2T: "Waraqaa Ragaa", opt2P: "Fayda ID waliin walqabata",
-            opt3T: "Giddugala Deeggarsaa", opt3P: "Tajaajila Agentaa Kallattii",
-            tHead: "Leenjiiwwan Ofisiyawaa (Track 10)",
-            tracks: ["AI Injiinariingii", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"]
-        }
+    const d = {
+        en: { tk: "MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA ID", ht: "Ethiopia's 2026 Digital Mission", hs: "National ID Verification Portal", ip: "Enter Fayda ID", vb: "VERIFY & ENTER", th: "Official Tracks (10)", jb: "JOIN NOW", tr: ["AI Engineering", "Cyber Security", "Full-Stack", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"] },
+        am: { tk: "ተልዕኮ 2026፡ ምዝገባ ተከፍቷል • በፋይዳ መታወቂያ የተረጋገጠ", ht: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", hs: "የብሔራዊ መታወቂያ ማረጋገጫ ፖርታል", ip: "የፋይዳ መታወቂያ ያስገቡ", vb: "አረጋግጥ እና ግባ", th: "ኦፊሴላዊ የሥልጠና ዘርፎች (10)", jb: "አሁን ይቀላቀሉ", tr: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "ሙሉ የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ ዴቭኦፕስ", "የሞባይል መተግበሪያ", "ብሎክቼይን", "ዩአይ/ዩኤክስ ዲዛይን", "አይኦቲ ሲስተምስ", "ፊንቴክ"] },
+        om: { tk: "ERGA 2026: GALMEEN BANAMEERA • FAYDA ID'N MIRKANAAYE", ht: "Ergaa Diigitalaa Itoophiyaa 2026", hs: "Waraqaa Eenyummaa Mirkaneessuuf", ip: "Koodii Fayda Galchaa", vb: "MIRKANEESSI & SEENI", th: "Leenjiiwwan Ofisiyawaa (10)", jb: "AMMA SEENI", tr: ["AI Injiinariingii", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"] }
     };
 
-    function translatePage(lang) {
-        const l = data[lang];
-        document.getElementById('ticker').innerText = l.ticker;
-        document.getElementById('join-btn').innerText = l.join;
-        document.getElementById('h-title').innerText = l.title;
-        document.getElementById('h-sub').innerText = l.sub;
-        document.getElementById('v-btn').innerText = l.btn;
-        document.getElementById('opt-1-t').innerText = l.opt1T; document.getElementById('opt-1-p').innerText = l.opt1P;
-        document.getElementById('opt-2-t').innerText = l.opt2T; document.getElementById('opt-2-p').innerText = l.opt2P;
-        document.getElementById('opt-3-t').innerText = l.opt3T; document.getElementById('opt-3-p').innerText = l.opt3P;
-        document.getElementById('t-head').innerText = l.tHead;
-
-        const grid = document.getElementById('track-container');
-        grid.innerHTML = "";
-        l.tracks.forEach(t => {
-            grid.innerHTML += `<div class="track"><b>${t}</b><p style="font-size:0.8rem; color:#666; margin-top:5px;">Mission 2026 Track</p></div>`;
-        });
+    function sh(l) {
+        const c = d[l];
+        document.getElementById('tk').innerText = c.tk;
+        document.getElementById('ht').innerText = c.ht;
+        document.getElementById('hs').innerText = c.hs;
+        document.getElementById('ip').placeholder = c.ip;
+        document.getElementById('vb').innerText = c.vb;
+        document.getElementById('th').innerText = c.th;
+        document.getElementById('jb').innerText = c.jb;
+        const g = document.getElementById('gl');
+        g.innerHTML = "";
+        c.tr.forEach(t => { g.innerHTML += `<div class="tr"><b>${t}</b><br><small>Mission 2026</small></div>`; });
     }
-
-    // Default Load
-    translatePage('en');
+    sh('en');
 </script>
-
 </body>
 </html>
