--- a/index.html
+++ b/index.html
@@ -1,80 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ልማት Hub | Digital 2026</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ልማት Hub | Digital Ethiopia 2026</title>
     <style>
-        :root { --b: #003973; --y: #FFD700; --g: #f4f4f4; }
-        body { font-family: sans-serif; margin: 0; background: #fff; }
-        .tick { background: var(--y); color: var(--b); padding: 10px; text-align: center; font-weight: bold; font-size: 14px; }
-        nav { display: flex; justify-content: space-between; padding: 15px 5%; border-bottom: 1px solid #ddd; }
-        .logo { color: var(--b); font-weight: bold; font-size: 20px; text-decoration: none; }
-        .main { max-width: 900px; margin: 40px auto; padding: 20px; text-align: center; }
-        .card { background: var(--b); color: #fff; padding: 40px; border-radius: 15px; border: 4px solid var(--y); }
-        input { width: 80%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 16px; text-align: center; }
-        button { background: var(--y); color: var(--b); padding: 15px 30px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; }
-        .langs { margin-bottom: 20px; }
-        .l-btn { margin: 0 5px; padding: 5px 10px; cursor: pointer; border: 1px solid #ddd; background: #eee; border-radius: 4px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-top: 40px; }
-        .tr { padding: 20px; border: 1px solid #eee; border-top: 4px solid var(--b); text-align: left; background: var(--g); border-radius: 8px; }
-        footer { background: #111; color: #777; padding: 40px; margin-top: 50px; text-align: center; font-size: 12px; }
-    </style>
-</head>
-<body>
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --white: #ffffff; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; transition: 0.2s; }
+        body { background: var(--bg); color: #333; line-height: 1.5; }
 
-<div class="tick" id="tk">ENROLLMENT OPEN: DIGITAL ETHIOPIA 2026 • VERIFIED BY FAYDA ID</div>
+        /* HEADER & NAV */
+        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; font-size: 0.85rem; }
+        nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; sticky: top; }
+        .logo { font-size: 24px; font-weight: bold; color: var(--blue); text-decoration: none; }
+        .nav-right { display: flex; gap: 15px; align-items: center; }
+        .lang-select { padding: 6px; border-radius: 5px; border: 1px solid #ccc; font-weight: bold; cursor: pointer; }
+        .join-btn { background: var(--yellow); color: var(--blue); padding: 10px 20px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; font-size: 0.9rem; box-shadow: 2px 2px 0px var(--blue); }
 
-<nav>
-    <a href="#" class="logo">ልማት Hub</a>
-    <div>
-        <span id="jb" style="background:var(--y); padding:8px 15px; border-radius:20px; font-weight:bold; font-size:12px; border:1px solid var(--b);">JOIN NOW</span>
-    </div>
-</nav>
+        .container { max-width: 1100px; margin: 40px auto; padding: 0 5%; }
 
-<div class="main">
-    <div class="langs">
-        <button class="l-btn" onclick="sh('en')">English</button>
-        <button class="l-btn" onclick="sh('am')">አማርኛ</button>
-        <button class="l-btn" onclick="sh('om')">Afaan Oromoo</button>
-    </div>
+        /* HERO SECTION */
+        .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 20px; text-align: center; border: 4px solid var(--yellow); margin-bottom: 40px; }
+        .id-input { width: 90%; max-width: 420px; padding: 16px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; color: #111; }
+        .v-btn { background: var(--yellow); color: var(--blue); padding: 16px 45px; border: none; border-radius: 8px; font-weight: 800; cursor: pointer; text-transform: uppercase; font-size: 1rem; }
 
-    <div class="card">
-        <h1 id="ht">Ethiopia's 2026 Digital Mission</h1>
-        <p id="hs">National ID Verification Portal</p>
-        <input type="number" id="ip" placeholder="Enter Fayda ID">
-        <br>
-        <button id="vb">VERIFY & ENTER</button>
-    </div>
+        /* DASHBOARD STATS */
+        .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-bottom: 50px; }
+        .stat-card { background: white; padding: 25px; border-radius: 12px; border-left: 6px solid var(--blue); box-shadow: 0 4px 6px rgba(0,0,0,0.05); text-align: left; }
+        .stat-card h4 { color: var(--blue); font-size: 1.1rem; margin-bottom: 5px; }
+        .stat-card p { color: #666; font-size: 0.9rem; }
 
-    <h2 id="th" style="text-align:left; margin-top:40px; color:var(--b);">Official Tracks</h2>
-    <div class="grid" id="gl"></div>
-</div>
+        /* TRACKS GRID */
+        .section-h { color: var(--blue); margin-bottom: 25px; border-left: 6px solid var(--yellow); padding-left: 15px; text-align: left; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 60px; }
+        .track { background: white; padding: 25px; border-radius: 15px; border-top: 5px solid var(--blue); text-align: left; border-right: 1px solid #eee; border-bottom: 1px solid #eee; }
+        .track:hover { border-top-color: var(--yellow); transform: translateY(-5px); }
+        .track b { color: var(--blue); display: block; margin-bottom: 8px; font-size: 1.1rem; }
 
-<footer>
-    <p id="cp">© 2026 ልማት Hub | Official Fayda Partner</p>
-</footer>
+        /* FAQ SECTION */
+        .faq-box { background: white; padding: 40px; border-radius: 20px; text-align: left; border: 1px solid #ddd; margin-bottom: 60px; }
+        .faq-item { margin-bottom: 25px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
+        .faq-item h3 { color: var(--blue); font-size: 1.2rem; margin-bottom: 10px; }
 
-<script>
-    const d = {
-        en: { tk: "MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA ID", ht: "Ethiopia's 2026 Digital Mission", hs: "National ID Verification Portal", ip: "Enter Fayda ID", vb: "VERIFY & ENTER", th: "Official Tracks (10)", jb: "JOIN NOW", tr: ["AI Engineering", "Cyber Security", "Full-Stack", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"] },
-        am: { tk: "ተልዕኮ 2026፡ ምዝገባ ተከፍቷል • በፋይዳ መታወቂያ የተረጋገጠ", ht: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", hs: "የብሔራዊ መታወቂያ ማረጋገጫ ፖርታል", ip: "የፋይዳ መታወቂያ ያስገቡ", vb: "አረጋግጥ እና ግባ", th: "ኦፊሴላዊ የሥልጠና ዘርፎች (10)", jb: "አሁን ይቀላቀሉ", tr: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "ሙሉ የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ ዴቭኦፕስ", "የሞባይል መተግበሪያ", "ብሎክቼይን", "ዩአይ/ዩኤክስ ዲዛይን", "አይኦቲ ሲስተምስ", "ፊንቴክ"] },
-        om: { tk: "ERGA 2026: GALMEEN BANAMEERA • FAYDA ID'N MIRKANAAYE", ht: "Ergaa Diigitalaa Itoophiyaa 2026", hs: "Waraqaa Eenyummaa Mirkaneessuuf", ip: "Koodii Fayda Galchaa", vb: "MIRKANEESSI & SEENI", th: "Leenjiiwwan Ofisiyawaa (10)", jb: "AMMA SEENI", tr: ["AI Injiinariingii", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"] }
-    };
-
-    function sh(l) {
-        const c = d[l];
-        document.getElementById('tk').innerText = c.tk;
-        document.getElementById('ht').innerText = c.ht;
-        document.getElementById('hs').innerText = c.hs;
-        document.getElementById('ip').placeholder = c.ip;
-        document.getElementById('vb').innerText = c.vb;
-        document.getElementById('th').innerText = c.th;
-        document.getElementById('jb').innerText = c.jb;
-        const g = document.getElementById('gl');
-        g.innerHTML = "";
-        c.tr.forEach(t => { g.innerHTML += `<div class="tr"><b>${t}</b><br><small>Mission 2026</small></div>`; });
-    }
-    sh('en');
-</script>
-</body>
-</html>
+        /* FOOTER */
+        footer { background: #111; color: white; padding: 80px 8% 40px; }
+        .f-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; text-align: left; }
+        .f-col h4 { color: var(--yellow); margin-bottom: 25px; text-transform: uppercase; font-size: 0.9rem; letter-spacing: 1px; }
+        .f-col p { color: #aaa; font-size: 0.9rem; margin-bottom: 12px; }
+        .f-bottom { border-top: 1px solid #333; margin-top: 50px; padding-top: 30px; text-align: center; color
