--- a/index.html
+++ b/index.html
@@ -3,51 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Digital Ethiopia 2026</title>
+    <title>ልማት Hub | Digital 2026 Ultimate</title>
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --white: #ffffff; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; transition: 0.2s; }
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --white: #ffffff; --green: #28a745; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; }
         body { background: var(--bg); color: #333; line-height: 1.5; }
 
         /* HEADER & NAV */
-        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; font-size: 0.85rem; }
-        nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; sticky: top; }
+        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; font-size: 0.85rem; position: sticky; top: 0; z-index: 2000; }
+        nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; position: sticky; top: 41px; z-index: 1000; }
         .logo { font-size: 24px; font-weight: bold; color: var(--blue); text-decoration: none; }
         .nav-right { display: flex; gap: 15px; align-items: center; }
         .lang-select { padding: 6px; border-radius: 5px; border: 1px solid #ccc; font-weight: bold; cursor: pointer; }
-        .join-btn { background: var(--yellow); color: var(--blue); padding: 10px 20px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; font-size: 0.9rem; box-shadow: 2px 2px 0px var(--blue); }
+        .join-btn { background: var(--yellow); color: var(--blue); padding: 10px 20px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; box-shadow: 2px 2px 0px var(--blue); }
 
         .container { max-width: 1100px; margin: 40px auto; padding: 0 5%; }
 
-        /* HERO SECTION */
-        .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 20px; text-align: center; border: 4px solid var(--yellow); margin-bottom: 40px; }
-        .id-input { width: 90%; max-width: 420px; padding: 16px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; color: #111; }
-        .v-btn { background: var(--yellow); color: var(--blue); padding: 16px 45px; border: none; border-radius: 8px; font-weight: 800; cursor: pointer; text-transform: uppercase; font-size: 1rem; }
+        /* PORTAL & SEARCH */
+        .hero { background: var(--blue); color: white; padding: 50px 20px; border-radius: 20px; text-align: center; border: 4px solid var(--yellow); margin-bottom: 40px; position: relative; }
+        .id-input { width: 90%; max-width: 420px; padding: 16px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
+        .v-btn { background: var(--yellow); color: var(--blue); padding: 16px 45px; border: none; border-radius: 8px; font-weight: 800; cursor: pointer; text-transform: uppercase; }
+        
+        .search-container { margin-top: 20px; }
+        .search-bar { width: 100%; max-width: 500px; padding: 12px; border-radius: 30px; border: 1px solid #ddd; margin-bottom: 30px; outline: none; }
 
-        /* DASHBOARD STATS */
-        .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-bottom: 50px; }
-        .stat-card { background: white; padding: 25px; border-radius: 12px; border-left: 6px solid var(--blue); box-shadow: 0 4px 6px rgba(0,0,0,0.05); text-align: left; }
-        .stat-card h4 { color: var(--blue); font-size: 1.1rem; margin-bottom: 5px; }
-        .stat-card p { color: #666; font-size: 0.9rem; }
+        /* ADVANCED STATS */
+        .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; margin-bottom: 50px; }
+        .stat-card { background: white; padding: 20px; border-radius: 12px; border-left: 6px solid var(--blue); box-shadow: 0 4px 6px rgba(0,0,0,0.05); text-align: left; }
+        .stat-card b { color: var(--blue); display: block; margin-bottom: 5px; }
+        .badge-live { display: inline-block; padding: 2px 8px; background: var(--green); color: white; border-radius: 4px; font-size: 0.7rem; margin-bottom: 10px; }
 
         /* TRACKS GRID */
         .section-h { color: var(--blue); margin-bottom: 25px; border-left: 6px solid var(--yellow); padding-left: 15px; text-align: left; }
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 60px; }
-        .track { background: white; padding: 25px; border-radius: 15px; border-top: 5px solid var(--blue); text-align: left; border-right: 1px solid #eee; border-bottom: 1px solid #eee; }
-        .track:hover { border-top-color: var(--yellow); transform: translateY(-5px); }
-        .track b { color: var(--blue); display: block; margin-bottom: 8px; font-size: 1.1rem; }
+        .track { background: white; padding: 25px; border-radius: 15px; border-top: 5px solid var(--blue); text-align: left; border: 1px solid #eee; }
+        .track:hover { border-top-color: var(--yellow); transform: translateY(-5px); cursor: pointer; }
 
-        /* FAQ SECTION */
+        /* FAQ & SUPPORT */
         .faq-box { background: white; padding: 40px; border-radius: 20px; text-align: left; border: 1px solid #ddd; margin-bottom: 60px; }
-        .faq-item { margin-bottom: 25px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
-        .faq-item h3 { color: var(--blue); font-size: 1.2rem; margin-bottom: 10px; }
+        .support-bubble { position: fixed; bottom: 20px; right: 20px; background: var(--blue); color: white; padding: 15px 25px; border-radius: 50px; font-weight: bold; box-shadow: 0 5px 15px rgba(0,0,0,0.2); cursor: pointer; z-index: 3000; border: 2px solid var(--yellow); }
 
         /* FOOTER */
-        footer { background: #111; color: white; padding: 80px 8% 40px; }
+        footer { background: #111; color: white; padding: 60px 8% 40px; }
         .f-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; text-align: left; }
-        .f-col h4 { color: var(--yellow); margin-bottom: 25px; text-transform: uppercase; font-size: 0.9rem; letter-spacing: 1px; }
-        .f-col p { color: #aaa; font-size: 0.9rem; margin-bottom: 12px; }
-        .f-bottom { border-top: 1px solid #333; margin-top: 50px; padding-top: 30px; text-align: center; color: #666; font-size: 0.85rem; }
+        .f-col h4 { color: var(--yellow); margin-bottom: 20px; font-size: 0.9rem; }
+        .f-bottom { border-top: 1px solid #333; margin-top: 40px; padding-top: 20px; text-align: center; color: #777; font-size: 0.8rem; }
     </style>
 </head>
 <body>
@@ -76,127 +76,8 @@
     </div>
 
     <div class="stats">
-        <div class="stat-card"><h4 id="o1">Course Progress</h4><p id="o1s">0% Complete</p></div>
-        <div class="stat-card"><h4 id="o2">Digital Certificates</h4><p id="o2s">Linked to National ID</p></div>
-        <div class="stat-card"><h4 id="o3">Notification Center</h4><p id="o3s">No New Alerts</p></div>
-    </div>
-
-    <h2 class="section-h" id="th">Official Specializations (10 Tracks)</h2>
-    <div class="grid" id="tl"></div>
-
-    <div class="faq-box">
-        <h2 class="section-h" id="fh">Frequently Asked Questions</h2>
-        <div id="fl"></div>
-    </div>
-</div>
-
-<footer>
-    <div class="f-grid">
-        <div class="f-col">
-            <h4>ልማት Hub</h4>
-            <p id="fa">Building the tech workforce of 2026 for a digital Ethiopia.</p>
+        <div class="stat-card">
+            <span class="badge-live">LIVE</span>
+            <b id="o1">Learning Streak</b>
+            <p id="o1s">0 Days (Verify to Start)</p>
         </div>
-        <div class="f-col">
-            <h4 id="flk">Quick Links</h4>
-            <p>Mission Statement</p>
-            <p>Curriculum 2026</p>
-            <p>Privacy Policy</p>
-        </div>
-        <div class="f-col">
-            <h4 id="fc">Contact Us</h4>
-            <p>Email: info@lemathub.et</p>
-            <p>Addis Ababa, Ethiopia</p>
-        </div>
-    </div>
-    <div class="f-bottom">
-        <p id="cp">© 2026 ልማት Hub | Official Fayda National ID Partner</p>
-        <p style="margin-top:8px;">Empowering Ethiopia's Digital Transformation</p>
-    </div>
-</footer>
-
-<script>
-    const lang = {
-        en: {
-            tk: "MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA ID",
-            jb: "JOIN NOW",
-            ht: "Ethiopia's 2026 Digital Mission",
-            hs: "National ID Verification Portal",
-            id: "Enter Fayda ID to access dashboard",
-            vb: "VERIFY & ENTER",
-            o1: "Course Progress", o1s: "0% Complete",
-            o2: "Certificates", o2s: "Linked to National ID",
-            o3: "Notifications", o3s: "No New Alerts",
-            th: "Official Specializations (10 Tracks)",
-            fh: "Frequently Asked Questions",
-            fa: "Building the tech workforce of 2026 for a digital Ethiopia.",
-            tr: ["AI Engineering", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile App Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"],
-            faq: [
-                {q: "Is this program free?", a: "Yes, all 2026 mission tracks are funded for verified citizens."},
-                {q: "Is ID required?", a: "Yes, a valid Fayda ID is mandatory for national certification."}
-            ]
-        },
-        am: {
-            tk: "ተልዕኮ 2026፡ ምዝገባ ተከፍቷል • በፋይዳ መታወቂያ የተረጋገጠ",
-            jb: "አሁን ይቀላቀሉ",
-            ht: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ",
-            hs: "የብሔራዊ መታወቂያ ማረጋገጫ ፖርታል",
-            id: "ዳሽቦርድ ለመድረስ የፋይዳ መታወቂያ ያስገቡ",
-            vb: "አረጋግጥ እና ግባ",
-            o1: "የትምህርት ሂደት", o1s: "0% ተጠናቋል",
-            o2: "የምስክር ወረቀቶች", o2s: "ከብሔራዊ መታወቂያ ጋር የተያያዘ",
-            o3: "ማሳወቂያዎች", o3s: "አዲስ መልዕክት የለም",
-            th: "ኦፊሴላዊ የሥልጠና ዘርፎች (10 ትራኮች)",
-            fh: "ተደጋጋሚ ጥያቄዎች",
-            fa: "ለዲጂታል ኢትዮጵያ የ2026 የቴክኖሎጂ የሰው ኃይል መገንባት።",
-            tr: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "ሙሉ የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ ዴቭኦፕስ", "የሞባይል መተግበሪያ", "ብሎክቼይን", "ዩአይ/ዩኤክስ ዲዛይን", "አይኦቲ ሲስተምስ", "ፊንቴክ"],
-            faq: [
-                {q: "ይህ ፕሮግራም ነፃ ነው?", a: "አዎ፣ ሁሉም የ2026 ተልዕኮ ትራኮች ለተረጋገጡ ዜጎች በነፃ የቀረቡ ናቸው።"},
-                {q: "መታወቂያ ያስፈልጋል?", a: "አዎ፣ ለብሔራዊ የምስክር ወረቀት ትክክለኛ የፋይዳ መታወቂያ ግዴታ ነው።"}
-            ]
-        },
-        om: {
-            tk: "ERGA 2026: GALMEEN BANAMEERA • FAYDA ID'N MIRKANAAYE",
-            jb: "AMMA SEENI",
-            ht: "Ergaa Diigitalaa Itoophiyaa 2026",
-            hs: "Waraqaa Eenyummaa Mirkaneessuuf",
-            id: "Daashboordii banuuf koodii Fayda galchaa",
-            vb: "MIRKANEESSI & SEENI",
-            o1: "Adeemsa Leenjii", o1s: "0% kan xumurame",
-            o2: "Waraqaa Ragaa", o2s: "Fayda ID waliin walqabata",
-            o3: "Beeksisa", o3s: "Beeksisa haaraan hin jiru",
-            th: "Leenjiiwwan Ofisiyawaa (10)",
-            fh: "Gaaffiiwwan Yeroo Baay'ee Gaafataman",
-            fa: "Humni namaa teeknooloojii 2026 Itoophiyaa diigitalaaf ijaaruuf.",
-            tr: ["AI Injiinariingii", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"],
-            faq: [
-                {q: "Leenjiin kun bilisaa?", a: "Eeyyee, track'n hundi lammilee mirkanaa'aniif kaffalameera።"},
-                {q: "Fayda ID'n ni barbaachisaa?", a: "Eeyyee, waraqaa ragaa argachuuf Fayda ID'n dirqama።"}
-            ]
-        }
-    };
-
-    function upd(l) {
-        const c = lang[l];
-        document.getElementById('tk').innerText = c.tk;
-        document.getElementById('jb').innerText = c.jb;
-        document.getElementById('ht').innerText = c.ht;
-        document.getElementById('hs').innerText = c.hs;
-        document.getElementById('id-pl').placeholder = c.id;
-        document.getElementById('vb').innerText = c.vb;
-        document.getElementById('o1').innerText = c.o1; document.getElementById('o1s').innerText = c.o1s;
-        document.getElementById('o2').innerText = c.o2; document.getElementById('o2s').innerText = c.o2s;
-        document.getElementById('o3').innerText = c.o3; document.getElementById('o3s').innerText = c.o3s;
-        document.getElementById('th').innerText = c.th;
-        document.getElementById('fh').innerText = c.fh;
-        document.getElementById('fa').innerText = c.fa;
-
-        const g = document.getElementById('tl'); g.innerHTML = "";
-        c.tr.forEach(t => { g.innerHTML += `<div class="track"><b>${t}</b><small>Specialization Track</small></div>`; });
-
-        const f = document.getElementById('fl'); f.innerHTML = "";
-        c.faq.forEach(q => { f.innerHTML += `<div class="faq-item"><h3>${q.q}</h3><p>${q.a}</p></div>`; });
-    }
-    upd('en');
-</script>
-</body>
-</html>
